# MLOps

./: .dockerfile  .gitignore  README.md  app.py  docker-compose.yml  main.py  model.py  models_api.py  pyproject.toml
models/: BaseModel.py  CoxModel.py  ModelAPI.py  models_api.py  survival.py
server/: Dockerfile  pyproject.toml  start.sh
server/conf/: nginx.conf
server/models/: models_api.py  survival.py
server/support/: load_to_postgres.py
server/tests/: rest.ipynb  test_database.py
support/: load_postgres.py  survival_test_data.csv
tests/: rest.ipynb  test_database.py  test_models.py
