[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.1.2"
flask-restx = "^0.5.1"
werkzeug = "2.1.2"
sqlalchemy = "^1.4.45"
psycopg2-binary = "^2.9.5"
numpy = "^1.23.5"
pandas = "^1.5.2"
statsmodels = "^0.13.5"
lifelines = "^0.27.4"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
